# image-explorer

./: .gitignore  README.md  demo_pipeline.py  final_report.tex  final_report_details.tex  plan.md  proposal.latex  pyproject.toml  run.sh  setup.ps1  setup.sh
.cursor/plans/: a100_deployment_setup_53bb49e0.plan.md  fix_3d_viewer_zoom_fc8ddc25.plan.md  full_gui_enhancement_45149447.plan.md  save_run_artifacts_log_62c3aef9.plan.md  three-task_enhancement_plan_051d6664.plan.md
backend/: app.py  depth_estimator.py  depth_pro_estimator.py  dust3r_reconstructor.py  inpainting.py  mesh_generator.py  object_generator.py  panorama_generator.py  requirements.txt  scene_processor.py  segmentation.py  skybox_generator.py
backend/configs/: default.yaml  indoor_orbit.yaml  seva_orbit_preset_for_dust3r.json  veo_test.yaml
backend/experiments/: __init__.py  artifact_layout.py  clip_recond_sweep.py  make_report_artifacts.py  metrics.py  prompts.py
backend/novel_view_synthesis/: __init__.py  panodreamer_synthesizer.py  seva_synthesizer.py  seva_synthesizer_4070ti.py  sv3d_synthesizer.py  sv3d_synthesizer_4070ti.py  svd_synthesizer.py  viewcrafter_synthesizer.py  vivid_synthesizer.py
backend/reconstruction/: dust3r_reconstructor.py  mesh_generator.py  (+5 more)
docs/: CLIP_RECONDITIONING_REPORT.md  DELTAS.md  RESEARCH_NOTES.md  SETUP_LINUX.md  SETUP_RUNPOD_A100.md  SETUP_WINDOWS_WSL.md
frontend/: index.html  main.js  package-lock.json  package.json
scripts/: lib_common.sh  package_results.sh  preflight_check.sh  run_all.sh  run_experiment.sh  run_main.sh  setup_runpod.sh
(+30 files in other folders)
