[project]
name = "image-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "accelerate>=0.25.0",
    "depth-pro",
    "diffusers>=0.24.0",
    "einops>=0.7.0",
    "fastapi>=0.104.0",
    "gradio>=6.9.0",
    "huggingface-hub>=0.19.0",
    "kornia>=0.7.0",
    "numpy>=1.24.0",
    "omegaconf>=2.3.0",
    "open3d>=0.17.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "rembg>=2.0.50",
    "roma>=1.5.6",
    "ropwr",
    "safetensors>=0.4.0",
    "scipy>=1.11.0",
    "timm>=0.9.12",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
    "trimesh>=4.0.0",
    "ultralytics>=8.0.0",
    "uvicorn>=0.24.0",
]

[tool.uv.workspace]
members = [
    "backend/vendor/ml-depth-pro",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
depth-pro = { workspace = true }
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
